--- a/src/style.scss
+++ b/src/style.scss
@@ -4,13 +4,13 @@ body, html {
     font-size: 30px;
     height: 100%;
 }
-.logo {
-    background-image: url('img/phillies-logo.png');
-    width: 100px;
-    height: 100px;
-    background-repeat: no-repeat;
-    background-size: contain;
-}
+// .logo {
+//     background-image: url('img/phillies-logo.png');
+//     width: 100px;
+//     height: 100px;
+//     background-repeat: no-repeat;
+//     background-size: contain;
+// }
 
 :root {
     text-size-adjust: 100%;
