--- a/src/styling/HomePageStyling.css
+++ b/src/styling/HomePageStyling.css
@@ -1,31 +1,72 @@
 .home-page-container {
     display: flex;
-    /* justify-content: center; */
     flex-direction: column;
     align-items: center;
 }
-.training-header {
-    width: 21%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    font-size: 35px;
+
+.image-container {
+    position: relative;
+    width: 100%;
+    height: 100vh; /* Make the image container take the full viewport height */
     text-align: center;
+    overflow: hidden; /* Ensure content doesn't overflow */
 }
+
+.background-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Cover the entire container */
+}
+
+.overlay-text {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+.overlay-text h1 {
+    font-size: 2.2em; /* Smaller font size */
+    /* margin: 0; */
+    margin-bottom: 300px;
+}
+
+.overlay-text h2 {
+    font-size: 1.5em; /* Smaller font size */
+    margin: 0;
+}
+
 .send-message-form {
     display: flex;
-    /* width: 60vw; */
-    flex-direction: row;
+    width: 100%; /* Make form container full width */
+    justify-content: center; /* Center form within the container */
     align-items: center;
-    justify-content: center;
-    margin-left: 500px;
-    /* margin-bottom: 20px; */
+    margin: 20px 0; /* Add margin for spacing */
 }
+
+.ant-form {
+    width: 100%; /* Ensure form takes full width of the container */
+    max-width: 600px; /* Limit form width */
+}
+
+.ant-form-item {
+    margin-bottom: 20px !important; /* Ensure there's enough space for error messages */
+}
+
+.ant-form-item-explain {
+    position: relative;
+    margin-top: 5px;
+    color: #ff4d4f; /* Error message color */
+}
+
 footer ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
 }
+
 footer ul li {
     margin-right: 20px;
     cursor: pointer;
